[gd_scene load_steps=17 format=4 uid="uid://ea1eybn62fhx"]

[ext_resource type="PackedScene" uid="uid://cx8kkqawojm0m" path="res://Scenes/Misc/SceneSettings.tscn" id="1_agbnj"]
[ext_resource type="Script" path="res://Scenes/Levels/Challenge/Challenge.gd" id="1_ahlch"]
[ext_resource type="PackedScene" uid="uid://ckp2r52hlcfxn" path="res://Scenes/NPC's/Npc_OfficeWorker/npc_officeworker_scene.tscn" id="2_rsveo"]
[ext_resource type="Texture2D" uid="uid://dyb5iqfj3tmwj" path="res://Art/Sprites/light.png" id="3_rkesi"]
[ext_resource type="TileSet" uid="uid://b3n0bklwwny1b" path="res://Art/TileMap.tres" id="4_1qglo"]
[ext_resource type="AudioStream" uid="uid://b1lr5ey8e6pu3" path="res://Art/Audio/BasementOgg.ogg" id="5_xk856"]
[ext_resource type="PackedScene" uid="uid://48vtm5vekhaq" path="res://Scenes/QuestUpdate.tscn" id="6_noyi7"]
[ext_resource type="Script" path="res://Scripts/QuestGeneral/Quest.gd" id="7_k15i5"]
[ext_resource type="PackedScene" uid="uid://b4l1gom0wsk8p" path="res://Scenes/Interactables/area_exit.tscn" id="8_00t3a"]
[ext_resource type="PackedScene" uid="uid://ciy4hladkyltc" path="res://Scenes/Levels/Challenge/ChallengeInfo.tscn" id="10_qxhua"]
[ext_resource type="PackedScene" uid="uid://ceoo6gamb4olk" path="res://Scenes/Interactables/Area_Blocker.tscn" id="10_ykag0"]
[ext_resource type="PackedScene" uid="uid://bvt7e871e6jeg" path="res://Scenes/NPC's/Enemy/Enemy.tscn" id="11_ve63e"]
[ext_resource type="PackedScene" uid="uid://dcl6l7rqg4sc1" path="res://Scenes/Interactables/TouchZone.tscn" id="12_i5do7"]
[ext_resource type="PackedScene" uid="uid://bblpsy4fvi76f" path="res://Scenes/Interactables/Coin.tscn" id="12_ybija"]
[ext_resource type="PackedScene" uid="uid://bvg5dny32iw0x" path="res://Scenes/Player/Player.tscn" id="13_r74rw"]
[ext_resource type="PackedScene" uid="uid://b6xb8nhlqtuhf" path="res://Scenes/ScoreTracker.tscn" id="14_2161q"]

[node name="Basement01" type="Node2D"]
script = ExtResource("1_ahlch")

[node name="SceneSettings" parent="." instance=ExtResource("1_agbnj")]

[node name="Scene" type="Node" parent="."]

[node name="Area2D" parent="Scene" instance=ExtResource("2_rsveo")]
position = Vector2(154, -48)
line1 = ["HELP!", "SAVE ME!", "!?!?!"]

[node name="PointLight2D" type="PointLight2D" parent="Scene"]
position = Vector2(45, 102)
energy = 0.5
texture = ExtResource("3_rkesi")

[node name="PointLight2D2" type="PointLight2D" parent="Scene"]
position = Vector2(-83, -90)
energy = 0.5
texture = ExtResource("3_rkesi")

[node name="PointLight2D3" type="PointLight2D" parent="Scene"]
position = Vector2(205, 101)
energy = 0.5
texture = ExtResource("3_rkesi")

[node name="PointLight2D4" type="PointLight2D" parent="Scene"]
position = Vector2(396, 101)
energy = 0.5
texture = ExtResource("3_rkesi")

[node name="PointLight2D5" type="PointLight2D" parent="Scene"]
position = Vector2(524, 103)
energy = 0.5
texture = ExtResource("3_rkesi")

[node name="PointLight2D6" type="PointLight2D" parent="Scene"]
position = Vector2(653, -89)
energy = 0.5
texture = ExtResource("3_rkesi")

[node name="TileMap" type="TileMapLayer" parent="Scene"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD8//3/AAABAAQAAAD9//3/AAACAAgAAAD+//3/AAADAAQAAAD///3/AAAFAAQAAAD8//7/AAABAAUAAAD8////AAABAAUAAAACAP3/AAAFAAQAAAAEAP3/AAAHAAQAAAAFAP3/AAAFAAQAAAAHAP3/AAAHAAQAAAAHAP7/AAAHAAUAAAAIAP7/AAAFAAUAAAAJAP7/AAAGAAUAAAAAAP7/AAAGAAUAAAABAP7/AAAHAAUAAAACAP7/AAAFAAUAAAAOAP3/AAAFAAQAAAAOAP7/AAAFAAUAAAAPAP7/AAAGAAUAAAAQAP3/AAAHAAQAAAAQAP7/AAAHAAUAAAAKAP3/AAAAAAUAAAALAP3/AAAEAAUAAAANAP3/AAAHAAQAAAD9//7/AAACAAUAAAD+//7/AAADAAUAAAD///7/AAAFAAUAAAADAP7/AAAGAAUAAAAEAP7/AAAHAAUAAAAFAP7/AAAFAAUAAAAKAP7/AAAHAAUAAAALAP7/AAAFAAUAAAAMAP7/AAAGAAUAAAD9////AAACAAUAAAD+////AAABAAUAAAD/////AAACAAUAAAAAAP//AAADAAUAAAABAP//AAADAAUAAAACAP//AAABAAUAAAADAP//AAACAAUAAAAEAP//AAADAAUAAAAFAP//AAABAAUAAAAGAP//AAACAAUAAAAHAP//AAADAAUAAAAIAP//AAABAAUAAAAJAP//AAACAAUAAAAKAP//AAADAAUAAAALAP//AAABAAUAAAAMAP//AAACAAUAAAANAP//AAABAAUAAAAOAP//AAACAAUAAAAPAP//AAADAAUAAAAQAP//AAADAAUAAAARAP//AAABAAUAAAD8/wAAAAABAAUAAAD9/wAAAAACAAUAAAD+/wAAAAADAAUAAAD//wAAAAABAAUAAAAAAAAAAAACAAUAAAABAAAAAAADAAUAAAACAAAAAAABAAUAAAADAAAAAAACAAUAAAAEAAAAAAADAAUAAAAFAAAAAAABAAUAAAAGAAAAAAACAAUAAAAHAAAAAAADAAUAAAAIAAAAAAABAAUAAAAJAAAAAAACAAUAAAAKAAAAAAABAAUAAAALAAAAAAACAAUAAAAMAAAAAAADAAUAAAANAAAAAAABAAUAAAAOAAAAAAACAAUAAAAPAAAAAAADAAUAAAAQAAAAAAABAAUAAAAGAP7/AAAGAAUAAAANAP7/AAAHAAUAAAARAP7/AAAFAAUAAAARAAAAAAABAAUAAAAPAAEAAAABAAYAAAAOAAEAAAACAAYAAAANAAEAAAABAAYAAAAMAAEAAAACAAYAAAALAAEAAAABAAYAAAAKAAEAAAACAAYAAAAJAAEAAAABAAYAAAAIAAEAAAACAAYAAAAHAAEAAAABAAYAAAAGAAEAAAACAAYAAAAFAAEAAAABAAYAAAAEAAEAAAACAAYAAAADAAEAAAABAAYAAAACAAEAAAADAAYAAAABAAEAAAACAAYAAAAAAAEAAAABAAYAAAD//wEAAAACAAYAAAD+/wEAAAABAAYAAAD9/wEAAAACAAYAAAD8/wEAAAABAAYAAAARAP3/AAAFAAQAAAAQAAEAAAACAAYAAAARAAEAAAADAAYAAAD7//3/AAAAAAQAAAD7//7/AAAAAAUAAAABAP3/AAAHAAQAAAAIAP3/AAAFAAQAAAASAP7/AAAGAAUAAAATAP3/AAAHAAQAAAATAP7/AAAHAAUAAAASAP//AAACAAUAAAATAP//AAADAAUAAAASAAAAAAACAAUAAAATAAAAAAADAAUAAAD7////AAAAAAUAAAD7/wAAAAAHAAUAAAD7/wEAAAAAAAYAAAAUAP3/AAACAAgAAAAVAP3/AAAEAAQAAAAVAP7/AAAEAAUAAAAVAAEAAAAEAAYAAAAVAP//AAACAAUAAAAVAAAAAAACAAUAAAABAAMAAAACAAgAAAACAAIAAAADAAcAAAACAAMAAAADAAgAAAADAAMAAAAEAAgAAAAQAAMAAAACAAgAAAARAAIAAAADAAcAAAARAAMAAAADAAgAAAASAAMAAAAEAAgAAAAEAAMAAAABAAQAAAAFAAMAAAACAAQAAAAGAAMAAAACAAgAAAAHAAMAAAABAAQAAAAIAAMAAAACAAQAAAAJAAMAAAADAAQAAAAKAAMAAAABAAQAAAALAAMAAAACAAQAAAAMAAMAAAACAAgAAAANAAMAAAABAAQAAAAOAAMAAAACAAQAAAAPAAMAAAADAAQAAAAAAAMAAAAAAAQAAAAAAAQAAAAAAAUAAAAAAAUAAAAAAAYAAAABAAQAAAABAAUAAAACAAQAAAACAAUAAAADAAQAAAADAAUAAAAEAAQAAAABAAUAAAAFAAQAAAACAAUAAAAGAAQAAAADAAUAAAAHAAQAAAABAAUAAAAIAAQAAAACAAUAAAAJAAQAAAADAAUAAAAKAAQAAAABAAUAAAALAAQAAAACAAUAAAAMAAQAAAADAAUAAAANAAQAAAABAAUAAAAOAAQAAAACAAUAAAAPAAQAAAADAAUAAAAQAAQAAAABAAUAAAARAAQAAAACAAUAAAASAAQAAAADAAUAAAABAAUAAAABAAYAAAACAAUAAAACAAYAAAADAAUAAAABAAYAAAAEAAUAAAABAAUAAAAFAAUAAAABAAUAAAAGAAUAAAABAAUAAAAHAAUAAAABAAUAAAAIAAUAAAABAAUAAAAJAAUAAAABAAUAAAAKAAUAAAABAAUAAAALAAUAAAABAAUAAAAMAAUAAAABAAUAAAANAAUAAAABAAUAAAAOAAUAAAABAAUAAAAPAAUAAAABAAUAAAAQAAUAAAACAAYAAAARAAUAAAABAAYAAAASAAUAAAACAAYAAAATAAMAAAAEAAQAAAATAAQAAAAEAAUAAAATAAUAAAAEAAYAAAASAAEAAAABAAYAAAATAAEAAAABAAYAAAAUAAEAAAACAAYAAAAUAAAAAAACAAUAAAAUAP//AAACAAUAAAAUAP7/AAADAAUAAAD6//3/AAAEAAEAADD6//7/AAAEAAEAADD6////AAAEAAEAADD6/wAAAAAEAAEAADD6/wEAAAAEAAEAADD7/wIAAAABAAcAAAD8/wIAAAABAAcAAAD9/wIAAAABAAcAAAD+/wIAAAABAAcAAAD//wIAAAABAAcAAAAAAAIAAAABAAcAAAABAAIAAAABAAcAAAADAAIAAAABAAcAAAAEAAIAAAABAAcAAAAFAAIAAAABAAcAAAAGAAIAAAABAAcAAAAHAAIAAAABAAcAAAAIAAIAAAABAAcAAAAJAAIAAAABAAcAAAAKAAIAAAABAAcAAAALAAIAAAABAAcAAAAMAAIAAAABAAcAAAANAAIAAAABAAcAAAAOAAIAAAABAAcAAAAPAAIAAAABAAcAAAAQAAIAAAABAAcAAAASAAIAAAABAAcAAAATAAIAAAABAAcAAAAUAAIAAAABAAcAAAAVAAIAAAABAAcAAAAWAAEAAAAEAAEAAAAWAAAAAAACAAYAAAAWAP//AAABAAUAAAAWAP7/AAABAAQAAAAWAP3/AAAEAAEAAAAVAPz/AAAEAAEAAGAUAPz/AAAEAAEAAGATAPz/AAAEAAEAAGASAP3/AAAEAAEAAGARAPz/AAAEAAEAAGAQAPz/AAAEAAEAAGAPAP3/AAAEAAEAAGAOAPz/AAAEAAEAAGANAPz/AAAEAAEAAGAMAP3/AAAEAAEAAGALAPz/AAAEAAUAAAAKAPz/AAAAAAUAAAAJAP3/AAAEAAEAAGAIAPz/AAAEAAEAAGAHAPz/AAAEAAEAAGAGAP3/AAAEAAEAAGAFAPz/AAAEAAEAAGAEAPz/AAAEAAEAAGADAP3/AAAEAAEAAGACAPz/AAAEAAEAAGABAPz/AAAEAAEAAGAAAP3/AAAEAAEAAGD///z/AAAEAAEAAGD+//z/AAAEAAEAAGD9//z/AAAEAAEAAGD8//z/AAAEAAEAAGD7//z/AAAEAAEAAGAAAAYAAAABAAcAAAABAAYAAAABAAcAAAACAAYAAAABAAcAAAADAAYAAAABAAcAAAAEAAYAAAAAAAUAAAAFAAYAAAABAAUAAAAGAAYAAAABAAUAAAAHAAYAAAABAAUAAAAIAAYAAAABAAUAAAAJAAYAAAABAAUAAAAKAAYAAAABAAUAAAALAAYAAAABAAUAAAAMAAYAAAABAAUAAAANAAYAAAABAAUAAAAOAAYAAAABAAUAAAAPAAYAAAABAAUAAAAQAAYAAAABAAcAAAARAAYAAAABAAcAAAASAAYAAAABAAcAAAATAAYAAAABAAcAAAAUAAUAAAAEAAEAAAAUAAQAAAAEAAEAAAAUAAMAAAAEAAEAAAD//wUAAAAEAAEAADD//wQAAAAEAAEAADD//wMAAAAEAAEAADAXAP//AAACAAUAAAAXAAAAAAACAAYAAAAXAP7/AAACAAQAAAAYAP7/AAABAAQAAAAYAP//AAABAAUAAAAZAP7/AAAGAAAAAAAZAP//AAACAAUAAAAaAP7/AAACAAgAAAAaAP//AAABAAUAAAAbAP7/AAAGAAcAAAAbAP//AAACAAUAAAAYAAAAAAACAAYAAAAZAAAAAAACAAYAAAAaAAAAAAACAAYAAAAbAAAAAAADAAYAAAAcAP7/AAADAAQAAAAcAP//AAADAAUAAAAdAP7/AAAEAAQAAAAdAP//AAAEAAUAAAAbAAIAAAADAAgAAAAcAAAAAAACAAYAAAAcAAIAAAAEAAgAAAAdAAAAAAAEAAYAAAAdAAIAAAAEAAQAAAAbAAEAAAADAAcAAAAaAAIAAAACAAgAAAAaAAMAAAABAAUAAAAaAAQAAAACAAYAAAAbAAMAAAACAAUAAAAbAAQAAAACAAYAAAAcAAMAAAADAAUAAAAcAAQAAAACAAYAAAAZAAIAAAAAAAQAAAAZAAMAAAAAAAUAAAAZAAQAAAAAAAYAAAAdAAMAAAAEAAUAAAAdAAQAAAAEAAYAAAAEAAcAAAAAAAUAAAAEAAgAAAAAAAUAAAAEAAkAAAAAAAYAAAAFAAcAAAABAAUAAAAFAAgAAAABAAUAAAAFAAkAAAABAAUAAAAGAAcAAAABAAUAAAAGAAgAAAABAAUAAAAGAAkAAAABAAUAAAAIAAcAAAABAAUAAAAJAAcAAAABAAUAAAAKAAcAAAABAAUAAAALAAcAAAABAAUAAAAMAAcAAAABAAUAAAAMAAgAAAABAAUAAAAMAAkAAAABAAUAAAALAAkAAAABAAUAAAAKAAkAAAABAAUAAAAJAAkAAAABAAUAAAAIAAkAAAABAAUAAAAIAAgAAAABAAUAAAAJAAgAAAABAAUAAAAKAAgAAAABAAUAAAALAAgAAAABAAUAAAAKAPv/AAAAAAUAAAAKAPr/AAAAAAUAAAALAPr/AAAEAAUAAAALAPv/AAAEAAUAAAALAPn/AAAEAAUAAAAKAPn/AAAAAAUAAAAFAPL/AAABAAUAAAAGAPL/AAABAAUAAAAHAPL/AAABAAUAAAAIAPL/AAABAAUAAAAJAPL/AAABAAUAAAAKAPL/AAABAAUAAAALAPL/AAABAAUAAAAMAPL/AAABAAUAAAANAPL/AAABAAUAAAAOAPL/AAABAAUAAAAPAPL/AAABAAUAAAAQAPL/AAABAAUAAAAQAPP/AAABAAQAAAAQAPT/AAAEAAUAAAAQAPX/AAAEAAUAAAAQAPb/AAABAAUAAAAQAPf/AAABAAUAAAAQAPj/AAABAAYAAAAPAPj/AAABAAYAAAAOAPj/AAABAAYAAAANAPj/AAABAAYAAAAMAPj/AAABAAYAAAALAPj/AAAEAAUAAAAKAPj/AAABAAUAAAAJAPj/AAABAAYAAAAIAPj/AAABAAYAAAAHAPj/AAABAAYAAAAGAPj/AAABAAYAAAAFAPj/AAABAAYAAAAFAPf/AAABAAUAAAAFAPb/AAABAAQAAAAFAPX/AAABAAUAAAAFAPT/AAABAAUAAAAFAPP/AAABAAUAAAAGAPf/AAABAAUAAAAHAPf/AAABAAUAAAAIAPf/AAABAAUAAAAJAPT/AAABAAUAAAAJAPX/AAABAAUAAAAKAPX/AAABAAUAAAALAPX/AAABAAUAAAALAPT/AAABAAUAAAAKAPT/AAABAAUAAAAAAO7/AAAAAAUAAAAAAO//AAAAAAUAAAAAAPD/AAAAAAUAAAAAAPH/AAAAAAUAAAAAAPL/AAAAAAUAAAAAAPP/AAAAAAUAAAAAAPT/AAAAAAUAAAAAAPX/AAAAAAUAAAAAAPb/AAAAAAUAAAAAAPf/AAAAAAUAAAAAAPj/AAAAAAYAAAABAO7/AAABAAUAAAABAO//AAABAAUAAAABAPD/AAABAAUAAAABAPH/AAABAAUAAAABAPL/AAABAAUAAAABAPP/AAABAAUAAAABAPT/AAABAAUAAAABAPX/AAABAAUAAAABAPb/AAABAAUAAAABAPf/AAABAAUAAAABAPj/AAABAAYAAAACAO7/AAABAAUAAAACAO//AAABAAUAAAACAPD/AAABAAUAAAACAPH/AAABAAUAAAACAPL/AAABAAUAAAACAPP/AAABAAUAAAACAPT/AAABAAUAAAACAPX/AAABAAUAAAACAPb/AAABAAUAAAACAPf/AAABAAUAAAACAPj/AAABAAYAAAADAO7/AAABAAUAAAADAO//AAABAAUAAAADAPD/AAABAAUAAAADAPH/AAABAAQAAAADAPL/AAAAAAUAAAADAPP/AAAAAAUAAAADAPT/AAAAAAUAAAADAPX/AAAAAAUAAAADAPb/AAABAAQAAAADAPf/AAABAAUAAAADAPj/AAABAAYAAAAEAO7/AAABAAUAAAAEAO//AAABAAUAAAAEAPD/AAABAAUAAAAEAPH/AAABAAQAAAAEAPL/AAABAAUAAAAEAPP/AAABAAUAAAAEAPT/AAABAAUAAAAEAPX/AAABAAUAAAAEAPb/AAABAAQAAAAEAPf/AAABAAUAAAAEAPj/AAABAAYAAAAFAO7/AAABAAUAAAAFAO//AAABAAUAAAAFAPD/AAABAAUAAAAFAPH/AAABAAQAAAAGAO7/AAABAAUAAAAGAO//AAABAAUAAAAGAPD/AAABAAUAAAAGAPH/AAABAAQAAAAGAPP/AAABAAQAAAAGAPT/AAABAAUAAAAGAPX/AAABAAUAAAAGAPb/AAABAAQAAAAHAO7/AAABAAUAAAAHAO//AAABAAUAAAAHAPD/AAABAAUAAAAHAPH/AAABAAQAAAAHAPP/AAABAAQAAAAHAPT/AAABAAUAAAAHAPX/AAABAAUAAAAHAPb/AAABAAQAAAAIAO7/AAABAAUAAAAIAO//AAABAAUAAAAIAPD/AAABAAUAAAAIAPH/AAABAAQAAAAIAPP/AAABAAQAAAAIAPT/AAABAAUAAAAIAPX/AAABAAUAAAAIAPb/AAABAAQAAAAJAO7/AAABAAUAAAAJAO//AAABAAUAAAAJAPD/AAABAAUAAAAJAPH/AAABAAQAAAAJAPP/AAABAAQAAAAJAPb/AAABAAQAAAAJAPf/AAABAAUAAAAKAO7/AAABAAUAAAAKAO//AAABAAUAAAAKAPD/AAABAAUAAAAKAPH/AAABAAQAAAAKAPP/AAABAAQAAAAKAPb/AAABAAQAAAAKAPf/AAABAAUAAAALAO7/AAABAAUAAAALAO//AAABAAUAAAALAPD/AAABAAUAAAALAPH/AAABAAQAAAALAPP/AAABAAQAAAALAPb/AAABAAQAAAALAPf/AAAEAAUAAAAMAO7/AAABAAUAAAAMAO//AAABAAUAAAAMAPD/AAABAAUAAAAMAPH/AAABAAQAAAAMAPP/AAABAAQAAAAMAPT/AAABAAUAAAAMAPX/AAABAAUAAAAMAPb/AAACAAUAAAAMAPf/AAACAAUAAAANAO7/AAABAAUAAAANAO//AAABAAUAAAANAPD/AAABAAUAAAANAPH/AAABAAQAAAANAPP/AAABAAQAAAANAPT/AAABAAUAAAANAPX/AAABAAUAAAANAPb/AAABAAUAAAANAPf/AAABAAUAAAAOAO7/AAABAAUAAAAOAO//AAABAAUAAAAOAPD/AAABAAUAAAAOAPH/AAABAAQAAAAOAPP/AAABAAQAAAAOAPT/AAABAAUAAAAOAPX/AAABAAUAAAAOAPb/AAABAAUAAAAOAPf/AAABAAUAAAAPAO7/AAABAAUAAAAPAO//AAABAAUAAAAPAPD/AAABAAUAAAAPAPH/AAABAAQAAAAPAPP/AAABAAQAAAAPAPT/AAABAAUAAAAPAPX/AAABAAUAAAAPAPb/AAABAAUAAAAPAPf/AAABAAUAAAAQAO7/AAABAAUAAAAQAO//AAABAAUAAAAQAPD/AAABAAUAAAAQAPH/AAABAAQAAAARAO7/AAABAAUAAAARAO//AAABAAUAAAARAPD/AAABAAUAAAARAPH/AAAGAAAAAAARAPL/AAABAAUAAAARAPP/AAABAAUAAAARAPT/AAABAAUAAAARAPX/AAABAAQAAAARAPb/AAABAAUAAAARAPf/AAABAAUAAAARAPj/AAABAAYAAAASAO7/AAABAAUAAAASAO//AAABAAUAAAASAPD/AAABAAUAAAASAPH/AAAAAAUAAAASAPL/AAAAAAUAAAASAPP/AAAAAAUAAAASAPT/AAAAAAUAAAASAPX/AAAAAAUAAAASAPb/AAABAAUAAAASAPf/AAABAAUAAAASAPj/AAABAAYAAAATAO7/AAABAAUAAAATAO//AAABAAUAAAATAPD/AAABAAUAAAATAPH/AAABAAUAAAATAPL/AAABAAUAAAATAPP/AAABAAUAAAATAPT/AAABAAUAAAATAPX/AAABAAUAAAATAPb/AAABAAUAAAATAPf/AAABAAUAAAATAPj/AAABAAYAAAAUAO7/AAABAAUAAAAUAO//AAABAAUAAAAUAPD/AAABAAUAAAAUAPH/AAABAAUAAAAUAPL/AAABAAUAAAAUAPP/AAABAAUAAAAUAPT/AAABAAUAAAAUAPX/AAABAAUAAAAUAPb/AAABAAUAAAAUAPf/AAABAAUAAAAUAPj/AAABAAYAAAAVAO7/AAAEAAUAAAAVAO//AAAEAAUAAAAVAPD/AAAEAAUAAAAVAPH/AAAEAAUAAAAVAPL/AAAEAAUAAAAVAPP/AAAEAAUAAAAVAPT/AAAEAAUAAAAVAPX/AAAEAAUAAAAVAPb/AAAEAAUAAAAVAPf/AAAEAAUAAAAVAPj/AAAEAAYAAAAHAAcAAAABAAUAAAAHAAgAAAABAAUAAAAHAAkAAAABAAUAAAANAAkAAAABAAUAAAAOAAkAAAABAAUAAAAOAAgAAAABAAUAAAANAAgAAAABAAUAAAAOAAcAAAABAAUAAAANAAcAAAABAAUAAAAFAAoAAAAAAAUAAAAGAAoAAAABAAUAAAAHAAoAAAABAAUAAAAIAAoAAAABAAUAAAAJAAoAAAABAAUAAAAKAAoAAAABAAUAAAALAAoAAAABAAUAAAAMAAoAAAABAAUAAAANAAoAAAABAAUAAAANAAsAAAABAAUAAAAMAAsAAAABAAUAAAALAAsAAAABAAUAAAAKAAsAAAABAAUAAAAJAAsAAAABAAUAAAAIAAsAAAABAAUAAAAHAAsAAAABAAUAAAAGAAsAAAABAAUAAAAFAAsAAAAAAAUAAAAFAAwAAAAAAAYAAAAGAAwAAAABAAUAAAAHAAwAAAABAAUAAAAIAAwAAAABAAUAAAAJAAwAAAABAAUAAAAKAAwAAAABAAUAAAALAAwAAAABAAUAAAAMAAwAAAABAAUAAAANAAwAAAABAAUAAAAGAA0AAAAAAAUAAAAHAA0AAAABAAUAAAAIAA0AAAABAAUAAAAJAA0AAAABAAUAAAAKAA0AAAABAAUAAAALAA0AAAABAAUAAAAMAA0AAAABAAUAAAALAA4AAAABAAUAAAAKAA4AAAABAAUAAAAJAA4AAAABAAUAAAAIAA4AAAABAAUAAAAHAA4AAAABAAUAAAAGAA4AAAAAAAYAAAAHAA8AAAAAAAYAAAAIAA8AAAABAAUAAAAJAA8AAAAGAAAAAAAKAA8AAAABAAUAAAALAA8AAAABAAUAAAAIABAAAAAAAAYAAAAJABAAAAACAAYAAAAKABAAAAACAAYAAAALABAAAAAEAAYAAAAPAAcAAAAEAAUAAAAPAAgAAAAEAAUAAAAPAAkAAAAEAAYAAAAOAAoAAAAEAAUAAAAOAAsAAAAEAAUAAAANAA0AAAAEAAUAAAAOAAwAAAAEAAYAAAAMAA4AAAADAAYAAAAMAA8AAAAEAAYAAAANAA4AAAAEAAYAAAAAAO3/AAABAAQAAAABAO3/AAABAAQAAAACAO3/AAABAAQAAAADAO3/AAABAAQAAAAEAO3/AAABAAQAAAAFAO3/AAABAAQAAAAGAO3/AAABAAQAAAAHAO3/AAABAAQAAAAIAO3/AAABAAQAAAAJAO3/AAABAAQAAAAKAO3/AAABAAQAAAALAO3/AAABAAQAAAAMAO3/AAABAAQAAAANAO3/AAABAAQAAAAOAO3/AAABAAQAAAAPAO3/AAABAAQAAAAQAO3/AAABAAQAAAARAO3/AAABAAQAAAASAO3/AAABAAQAAAATAO3/AAABAAQAAAAUAO3/AAABAAQAAAAVAO3/AAABAAQAAAA=")
tile_set = ExtResource("4_1qglo")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Scene"]
stream = ExtResource("5_xk856")
volume_db = -3.0
autoplay = true

[node name="Quests" type="Node" parent="Scene"]

[node name="QuestUpdate" parent="Scene/Quests" node_paths=PackedStringArray("quest") instance=ExtResource("6_noyi7")]
position = Vector2(10, 14)
quest = NodePath("../BasementQuest")

[node name="QuestUpdate2" parent="Scene/Quests" node_paths=PackedStringArray("quest") instance=ExtResource("6_noyi7")]
position = Vector2(815, -10)
scale = Vector2(0.789, 0.884)
quest = NodePath("../BasementQuest")
type = 2

[node name="BasementQuest" type="Node" parent="Scene/Quests"]
script = ExtResource("7_k15i5")
quest_id = 2
quest_name = "Into the basement"
quest_objective = Array[String](["Find the end of the basement", "Activate the paintings to open the door"])
quest_reward = 15

[node name="AreaExit" parent="Scene" instance=ExtResource("8_00t3a")]
position = Vector2(879, -113.42)
next_scene = ExtResource("10_qxhua")

[node name="AreaBlocker" parent="Scene" instance=ExtResource("10_ykag0")]
position = Vector2(876, -62)

[node name="TouchZone" parent="Scene" instance=ExtResource("12_i5do7")]
position = Vector2(816, -47)
scale = Vector2(0.645, 0.645)
zone_name = "Painting 1"
interactable = true

[node name="TouchZone2" parent="Scene" instance=ExtResource("12_i5do7")]
position = Vector2(545, -448)
scale = Vector2(0.645, 0.645)
zone_name = "Painting 2"
interactable = true

[node name="TouchZone3" parent="Scene" instance=ExtResource("12_i5do7")]
position = Vector2(303, 498)
zone_name = "Painting 3"
interactable = true

[node name="NPCs" type="Node" parent="."]

[node name="Enemy" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(206, -4)

[node name="Enemy2" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(358, 145)

[node name="Enemy3" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(355, -46)

[node name="Enemy4" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(877, 114)

[node name="Enemy5" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(547, -46)

[node name="Enemy6" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(444, 373)

[node name="Enemy7" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(219, 374)

[node name="Enemy8" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(465, 282)

[node name="Enemy9" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(188, 290)

[node name="Enemy10" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(245, 449)

[node name="Enemy11" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(401, 449)

[node name="Enemy12" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(69, -268)

[node name="Enemy13" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(222, -270)

[node name="Enemy14" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(47, -398)

[node name="Enemy15" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(471, -314)

[node name="Enemy16" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(546, -283)

[node name="Enemy17" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(132, -551)

[node name="Enemy18" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(278, -526)

[node name="Enemy19" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(416, -550)

[node name="Enemy20" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(646, -529)

[node name="Enemy21" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(657, -328)

[node name="Enemy22" parent="NPCs" instance=ExtResource("11_ve63e")]
position = Vector2(138, -389)

[node name="Pickups" type="Node" parent="."]

[node name="Sprite2D" parent="Pickups" instance=ExtResource("12_ybija")]
position = Vector2(157, -7)

[node name="Sprite2D2" parent="Pickups" instance=ExtResource("12_ybija")]
position = Vector2(444, -50)

[node name="Sprite2D3" parent="Pickups" instance=ExtResource("12_ybija")]
position = Vector2(712, -1)

[node name="Sprite2D4" parent="Pickups" instance=ExtResource("12_ybija")]
position = Vector2(416, 152)

[node name="Pickup" parent="Pickups" instance=ExtResource("12_ybija")]
position = Vector2(441, 150)

[node name="Pickup2" parent="Pickups" instance=ExtResource("12_ybija")]
position = Vector2(471, 154)

[node name="Player" parent="." instance=ExtResource("13_r74rw")]
position = Vector2(-90, -18)

[node name="Score_tracker_layer" parent="." instance=ExtResource("14_2161q")]

[connection signal="interacted" from="Scene/TouchZone" to="." method="_on_touch_zone_interacted"]
[connection signal="interacted" from="Scene/TouchZone2" to="." method="_on_touch_zone_2_interacted"]
[connection signal="interacted" from="Scene/TouchZone3" to="." method="_on_touch_zone_3_interacted"]
